--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "e300035d-612f-4c03-a08b-5f9ef79b2e94"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
