--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "angular-jest-basics",
   "version": "0.0.0",
   "scripts": {
+    "postinstall": "ngcc",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -29,10 +30,10 @@
     "@angular-devkit/build-angular": "~12.2.9",
     "@angular/cli": "~12.2.9",
     "@angular/compiler-cli": "~12.2.0",
-    "@types/jest": "^27.0.2",
+    "@types/jest": "^27.5.2",
     "@types/lodash-es": "^4.17.5",
     "@types/node": "^12.11.1",
-    "jest": "^27.3.1",
+    "jest": "^27.5.1",
     "jest-preset-angular": "^10.1.0",
     "typescript": "~4.3.5"
   }
